# Rust_Auth_Server

./: Cargo.toml  README.md
migrations/: 20221011204127_create-tables.sql
src/: main.rs
src/config/: crypto.rs  mod.rs
src/db/: user.rs
src/handlers/: mod.rs
src/models/: user.rs
